# fastapi_simple_balancer

./: .env  .gitignore  Makefile  README.md  dbmate.yml  docker-compose.yml  locustfile.py  pyproject.toml
app/: main.py
app/application/actions/: url_transform.py
app/application/api/: __init__.py
app/application/api/balancer/: handler.py
app/application/api/config/: handler.py  models.py
app/application/commands/: config.py  request.py
app/application/common/: settings.py
app/application/dto/: config.py  request.py
app/application/exceptions/: action.py
app/application/protocols/: config_repo.py  request_cache.py  request_counter.py
app/domain/entity/: config.py
app/infrastructure/exceptions/: repository.py
app/infrastructure/gateways/repositories/config/: inmemory.py  sql.py
app/infrastructure/gateways/request_cache/: inmemory.py  redis.py
app/infrastructure/gateways/request_counter/: inmemory.py  redis.py
app/setup/: ioc.py  web.py
db/migrations/: 001_create_cdn_config.sql
tests/application/action/: test_url_transform.py
