[project]
name = "balancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "locust>=2.37.10",
    "orjson>=3.10.18",
    "pip>=25.1.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytest>=8.4.0",
    "pytest-dotenv>=0.5.2",
    "redis>=6.2.0",
    "uvicorn>=0.34.3",
]
